--- a/template.yaml
+++ b/template.yaml
@@ -17,7 +17,7 @@ Resources:
   S3EventNotificationFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: call-discord-webhook/
+      CodeUri: CallDiscordWebhoook/
       Handler: app.lambda_handler
       Runtime: python3.9
       Timeout: 5
